--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
 
         <div id="radiation-animation">
     <h2>Radiation Beam Simulation</h2>
-    <p>At samRad Health Technologies, our mission centers on <strong>precision</strong>&mdash;a quality vividly demonstrated in this radiation beam simulation. The gantry, the rotating arm of a radiation machine, precisely delivers a targeted beam to the tumor, minimizing exposure to healthy tissue. This animation highlights the <strong>crucial role of accurate targeting</strong> in modern cancer treatment and is a core example of the advancements we bring to cancer care.</p>
+    <p>At samRad Health Technologies, our mission centers on <strong>precision</strong>&mdash;a quality vividly demonstrated in this radiation beam simulation. The gantry, the rotating arm of a radiation machine, precisely delivers a targeted beam to the tumor, minimizing exposure to healthy tissue. This animation highlights the <strong>crucial role of accurate targeting</strong> in modern cancer treatment and is a core example of the advancements we are working to bring to cancer care.</p>
     
     <div id="animation-container-horizontal">
         <div class="gantry-circle">
