--- a/index.html
+++ b/index.html
@@ -508,9 +508,15 @@
 
         <section id="quiz">
             <h2>Imaging and Quiz</h2>
-            <p>Radiology is more than just images on a screen&mdash;it’s often the first glimpse into a life forever changed. For those touched by cancer, whether through personal battle, the struggle of a loved one, or even the fear of the unknown, the journey is deeply personal. In those moments of waiting and worry, tools like MRI, CT, and PET scans become lifelines&mdash;windows into hope, clarity, and action. Understanding these tools can bring comfort, courage, and a sense of control when everything else feels uncertain.</p>
+            <p>Medical imaging—like MRI, CT, and PET scans—is often the first step in diagnosing and treating cancer. These tools guide decisions and shape care, but many people don’t fully understand what they are or how they work.</p>
 
-            <p><strong>Test your knowledge:</strong></p>
+  <p>At <strong>samRad Health Technologies</strong>, we’re developing software that helps detect tumors directly from medical images (DICOM files)—making diagnosis faster and more accessible.</p>
+
+  <p>Being informed can reduce fear, improve communication with your care team, and help you make confident choices.</p>
+
+  
+            <p><strong>Take the quiz to learn the basics and better navigate your health journey.</strong></p>
+
             <button id="start-quiz-btn">Start Quiz</button>
             <form id="quiz-form" style="display:none; margin-top:1.5rem;"></form>
             <div id="quiz-result" style="margin-top:1.5rem; font-weight:bold;"></div>
