--- a/index.html
+++ b/index.html
@@ -507,15 +507,17 @@
         </section>
 
         <section id="quiz">
-            <h2>Imaging and Quiz</h2>
-            <p>Medical imaging—like MRI, CT, and PET scans—is often the first step in diagnosing and treating cancer. These tools guide decisions and shape care, but many people don’t fully understand what they are or how they work.</p>
+           <h2>Imaging and Quiz</h2>
+<p>Medical imaging—like MRI, CT, and PET scans—is often the first step in diagnosing and treating cancer. These tools guide decisions and shape care, but many people don’t fully understand what they are or how they work.</p>
 
-  <p>At <strong>samRad Health Technologies</strong>, we’re developing software that helps detect tumors directly from medical images (DICOM files)—making diagnosis faster and more accessible.</p>
+<p>Early detection is especially critical for cancers like breast cancer, prostate cancer, and glioblastoma. Catching these diseases in their earliest stages can significantly improve treatment options, reduce the need for aggressive interventions, and boost survival rates.</p>
 
-  <p>Being informed can reduce fear, improve communication with your care team, and help you make confident choices.</p>
+<p>At <strong>samRad Health Technologies</strong>, we’re developing software that helps detect tumors directly from medical images (DICOM files)—making diagnosis faster, earlier, and more accessible. Our goal is to support timely intervention, enable emerging treatment modalities, and ultimately improve patient outcomes.</p>
 
-  
-            <p><strong>Take the quiz to learn the basics and better navigate your health journey.</strong></p>
+<p>Being informed can reduce fear, improve communication with your care team, and help you make confident choices.</p>
+
+<p><strong>Take the quiz to learn the basics and better navigate your health journey.</strong></p>
+
 
             <button id="start-quiz-btn">Start Quiz</button>
             <form id="quiz-form" style="display:none; margin-top:1.5rem;"></form>
